# Cpp-image-alignment-2dcamera

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
src/: ImageData.cpp  ImageData.h  Logger.cpp  Logger.h  ProcessQueue.cpp  ProcessQueue.h  main.cpp
